@@ -1,3 +1,11 @@
+2007-09-30  Dan Williams  <dcbw@redhat.com>
+
+	* src/password-dialog.c
+		- Fix spacing
+		- (nma_wpa_passphrase_to_hex): handle SSIDs with NULL bytes, indicate
+			errors
+		- (response_cb): handle errors hashing passphrase
+
 2007-09-28  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet.c
